fixed background image zooming out too much

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -30,7 +30,7 @@
   #layernamecont #bknameul li {
     padding: 0vw 0 0vh;
     letter-spacing: 0rem;
-    color: #f3efef;
+    color: rgb(243, 239, 239);
   }
   #layernamecont #bknameul li:first-child {
     letter-spacing: 0.1rem;
@@ -38,16 +38,17 @@
 }
 
 .bodywidthlimit {
-  max-width: 100%;
-  width: 89.6vw;
-  padding: 0 5.2vw;
+  max-width: 90%;
+  width: 81.5vw;
+  padding: 0 9.25vw;
 }
 
 .headerstyle {
   font-family: "Montserrat", sans-serif;
-  letter-spacing: 0.11rem;
+  letter-spacing: 0.2rem;
   /**Turn into variable asap*/
-  font-size: 1.5rem;
+  font-size: 1.35em;
+  padding-bottom: 0.71em;
   text-transform: uppercase;
 }
 
@@ -93,7 +94,7 @@
 }
 @media (min-width: 768px) {
   #body #introcont #mecont {
-    padding: 4vh 0 0 0;
+    padding: 6.66vh 0 0 0;
     flex-flow: row;
   }
 }
@@ -119,8 +120,8 @@
 #body #introcont #mecont #mecontactcont li {
   flex: 1;
   display: inline-flex;
-  padding: 2px 5px;
-  font-size: 1.4rem;
+  padding: 2px 0.4em;
+  font-size: 2em;
   justify-content: flex-end;
   align-items: flex-end;
 }
@@ -130,11 +131,6 @@
 }
 #body #introcont #mecont #mecontactcont li a:visited {
   color: black;
-}
-#body #introcont #mecont #mecontactcont li a:hover {
-  color: #4d4e53;
-  font-size: 96%;
-  transition: 0.1s all;
 }
 #body #introcont #mecont #mecontactcont li i {
   cursor: pointer;
@@ -171,7 +167,7 @@
   display: flex;
   flex-direction: column;
   padding-left: 0.33em;
-  padding-top: 4vh;
+  padding-top: 6.66vh;
 }
 #body #technicalcont #skillstopaythebillscont p {
   padding-top: 0.15em !important;
@@ -211,31 +207,26 @@
   word-spacing: 0.1em;
 }
 #body #technicalcont #wordsleft p:nth-child(2n) {
-  color: #66470e;
+  color: rgb(102, 71, 14);
   padding: 0 0.05em;
 }
 #body #showcasecont {
-  margin: 4vh 0;
+  margin: 6.66vh 0;
 }
 @media (min-width: 768px) {
   #body #showcasecont {
-    margin-top: 4vh;
+    margin-top: 6.66vh;
   }
 }
 #body #showcasecont #workcasecont {
-  width: 100%;
+  max-width: 100vw;
   display: flex;
-  flex-flow: column;
-}
-@media (min-width: 768px) {
-  #body #showcasecont #workcasecont {
-    flex-flow: row;
-  }
+  flex-wrap: wrap;
 }
 #body #showcasecont #workcasecont .workcase {
   margin: 0vh 0 0vh 0;
   padding: 0 1em;
-  max-width: 100%;
+  min-width: 35vw;
   flex: 1;
   display: flex;
   flex-flow: column;
@@ -259,7 +250,7 @@
 }
 #body #showcasecont #workcasecont .workcase .wkHeaderCont span h5 {
   font-size: 1.45em;
-  color: #695757;
+  color: rgb(105, 87, 87);
 }
 #body #showcasecont #workcasecont .workcase .wkBodyCont {
   padding: 5vh 0;
@@ -291,7 +282,7 @@
   }
 }
 #body #projectshowcasecont .projectsCont .titlecont {
-  margin-top: 4vh;
+  margin-top: 6.66vh;
 }
 #body #projectshowcasecont .projectsCont .projectCont {
   font-family: monospace;
@@ -346,7 +337,7 @@
 #body #projectshowcasecont .projectsCont .projectCont#IntroCardCont .projTitleCont #ptc_Header {
   min-width: 95%;
   font-family: "Montserrat", sans-serif;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   padding: 2.5vh 0;
@@ -375,7 +366,7 @@
   }
 }
 #body #projectshowcasecont .projectsCont .projectCont#IntroCardCont .projTitleCont #ptc_Body p {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   padding: 0.25vh 7px;
 }
 @media (min-width: 768px) {
@@ -402,7 +393,7 @@
 }
 #body #projectshowcasecont .projectsCont .projectCont#IntroCardCont .projTitleCont #ptc_Body .ptc_Button p {
   cursor: pointer;
-  background-color: #e2d9ca;
+  background-color: rgb(226, 217, 202);
   padding: 9px;
   width: 15em;
   color: black;
@@ -417,7 +408,14 @@
 }
 #body #projectshowcasecont .projectsCont .projectCont .projTitleCont .projCardImageCont {
   flex: 1;
-  overflow: hidden;
+}
+#body #projectshowcasecont .projectsCont .projectCont .projTitleCont .projCardImageCont .GHImg {
+  background-image: url("https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png");
+  background-attachment: scroll;
+  background-size: 15%;
+  background-repeat: repeat;
+  width: 100%;
+  height: 100%;
 }
 #body #projectshowcasecont .projectsCont .projectCont .projTitleCont .projCardImageCont img {
   overflow: hidden;
@@ -427,10 +425,9 @@
   object-position: 50% 50%;
 }
 #body #projectshowcasecont .projectsCont .projectCont .projTitleCont p {
-  padding-top: 0.25em;
+  padding-top: 0.75em;
   padding-bottom: 0.5em;
   background-color: white;
-  z-index: 2;
 }
 #body #projectshowcasecont .projectsCont .projectCont .proPicCont {
   flex: 1;
@@ -441,8 +438,6 @@
   background-attachment: scroll;
   background-size: 150%;
   background-repeat: no-repeat;
-  scale: 1.25;
-  z-index: 1;
 }
 #body #projectshowcasecont .projectsCont .projectCont #SmileFaceParallax {
   background-image: url(https://raw.githubusercontent.com/xaviif/portfolio/main/docs/assets/img/nysky.jpg);
@@ -497,13 +492,13 @@
 }
 #body #foot #bodyContactmeCont #emailSubmitCont {
   flex: 1;
-  border-left: 1px solid #d4d3d3;
+  border-left: 1px solid rgb(212, 211, 211);
   text-align: left;
   display: flex;
   justify-content: center;
 }
 #body #foot #footerEndNoteCont {
-  border-top: 1px solid #d4d3d3;
+  border-top: 1px solid rgb(212, 211, 211);
   width: 99%;
 }
 
